更新 - 完成 content 左侧 menu 区域

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delicious-candy",
+  "name": "eleme-candy",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Bowen <mr_lbw@outlook.com>",
